# ipf-examples

./: Dockerfile  Examples_Home.py  pyproject.toml  requirements.txt  streamlit_app.py
ipf_examples/: Examples_Home.py
ipf_examples/models/: base_extension.py  ipf_dora_example.py  ipf_report.py
ipf_examples/models/pages/: Global_Search.py
ipf_examples/pages/: Global_Search.py
pages/: Join_Table.py  Service_Now.py
st_pages/: join_table_page.py  service_now_page.py
