[tool.poetry]
name = "ipfabric-extenstions"
version = "0.1.0"
description = "an Example of custom Extenstions built using the IP Fabric API"
authors = ["Cristian Cordero <cristian.cordero@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ipf_examples"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.39.0"
ipfabric = {version = "^6.9.10", extras = ["all"]}
ipfabric-snow = "^0.1.0b15"
ipfabric-reports = {git = "https://gitlab.com/ip-fabric/integrations/scripts/ipfabric-reports"}
tomli = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
